--- a/about.html
+++ b/about.html
@@ -334,7 +334,107 @@ br><br><br><br>
         </td>
     </tr>
 </table>
+<footer class="footer">
+      <div class="wrapper">
+        <div class="footer-content">
+          <div class="footer-content__main">
+            <img
+              src="http://specthemes.com/dreamhouse-template/dreamhouse/img/logos/logo-footer.png"
+              alt="logo"
+            />
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras
+              lacinia magna vel molestie faucibus.
+            </p>
+            <p class="footer-copyright">
+              &copy; Copyright, INT20_21_Gr22. All rights reserved
+            </p>
+          </div>
+          <div class="footer-site-map">
+            <h4>Site map</h4>
+            <ul>
+              <li><a href="home.html">Home</a></li>
+              <li><a href="about.html">About</a></li>
+              <li><a href="services.html">Services</a></li>
+              <li><a href="contact.html">Contact</a></li>
+              <li>
+                <a
+                  href="https://www.aims.ca/site/media/aims/2.pdf"
+                  target="_blank"
+                  >Info</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div class="footer-contact-us">
+            <h4>Contact us</h4>
+            <ul>
+              <li>Call us</li>
+              <li><a href="tel:+1 23-456-789">+1 23-456-789</a></li>
+              <li>Mail us</li>
+              <li>
+                <a href="mailto: dreamhouse@gmail.com">dreamhouse@gmail.com</a>
+              </li>
+            </ul>
+          </div>
+          <div class="footer-visit-us">
+            <h4>Visit us</h4>
+            <ul>
+              <li>Our location</li>
+              <li><address>113, New York, NY Sheram 113 254</address></li>
+            </ul>
+          </div>
+          <div class="footer-search">
+            <h4>Search, social links</h4>
+            <ul>
+              <li class="search">
+                <input type="text" placeholder="Search..." name="search" />
+              </li>
 
+              <ul class="nested-list">
+                <li>
+                  <a href="https://www.facebook.com/" target="_blank"
+                    ><img
+                      src="/images/facebook.png"
+                      alt="facebook logo"
+                      width="20px"
+                      height="20px"
+                  /></a>
+                </li>
+                <li>
+                  <a href="https://www.instagram.com/" target="_blank">
+                    <img
+                      src="/images/instagram.png"
+                      alt="instagram logo"
+                      width="20px"
+                      height="20px"
+                    />
+                  </a>
+                </li>
+                <li>
+                  <a href="https://www.twitter.com/" target="_blank"
+                    ><img
+                      src="/images/twitter.png"
+                      alt="twitter logo"
+                      width="20px"
+                      height="20px"
+                  /></a>
+                </li>
+                <li>
+                  <a href="https://www.youtube.com/" target="_blank"
+                    ><img
+                      src="/images/youtube.png"
+                      alt="youtube logo"
+                      width="20px"
+                      height="20px"
+                  /></a>
+                </li>
+              </ul>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
 
 
 
