--- a/blog_post.html
+++ b/blog_post.html
@@ -135,7 +135,7 @@
 				                  	       <img src="images/blog_post_image2.jpg" height="100px" width="100%" style="padding: 10px;">
 				                  	  </td>
 				                      
-				                      <td>
+				                      <td bgcolor="white">
 				                  	        <a href="#" class="Pershkrim_posti"> Lorem Ipsum is simply dummy text of the printing. </a><br><br>
 				                  	        <p style="padding-bottom: 5px; color: #808080; font-family: sans-serif;">November, 26</p>
 				                      </td>
@@ -146,7 +146,7 @@
 				                  	        <img src="images/blog_post_image3.jpg" height="100px" width="100%" style="padding: 10px;">
 
 				                        </td>
-				                        <td>
+				                        <td bgcolor="white">
 				                  	        <a href="#" class="Pershkrim_posti"> Lorem Ipsum is simply dummy text of the printing. </a><br><br>
 				                  	        <p style="padding-bottom: 5px; color: #808080; font-family: sans-serif;">November, 26</p>
 				                        </td>
@@ -158,7 +158,7 @@
 				                  	        <img src="images/blog_post_image4.jpg" height="100px" width="100%" style="padding: 10px;">
 
        				                    </td>
-				                        <td>
+				                        <td bgcolor="white">
 				                  	        <a href="#" class="Pershkrim_posti">Lorem Ipsum is simply dummy text of the printing.</a><br><br>
 				                  	        <p style="padding-bottom: 5px; color: #808080; font-family: sans-serif;">November, 26</p>
 				                        </td>
