INT-16: link all pages in header

--- a/blog_list.html
+++ b/blog_list.html
@@ -18,10 +18,10 @@
     <header>
       <div class="wrapper">
         <div class="header">
-          <a href="/home.html">
+          <a href="/home.html" id="logo">
             <img
               alt="Logo company logo"
-              src="images/logo.PNG"
+              src="/images/logo.png"
               width="350"
               height="60"
             />
@@ -33,16 +33,14 @@
                 <a href="home.html">HOME <i class="fas fa-angle-down"></i></a>
               </div>
               <div class="dropdown-content">
-                <a href="#">HOME SLIDER</a>
+                <a href="home.html">HOME SLIDER</a>
                 <a href="#">HOME IMAGE</a>
                 <a href="#">HOME VIDEO</a>
               </div>
             </div>
             <div class="dropdown">
               <div class="dropdown__main">
-                <a href="projects.html"
-                  >PROJECTS <i class="fas fa-angle-down"></i
-                ></a>
+                <a href="#">PROJECTS <i class="fas fa-angle-down"></i></a>
               </div>
               <div class="dropdown-content">
                 <a href="#">PROJECT MASONRY</a>
@@ -57,12 +55,14 @@
             </div>
             <div class="dropdown">
               <div class="dropdown__main">
-                <a href="">BLOG <i class="fas fa-angle-down"></i></a>
+                <a href="blog_grid.html"
+                  >BLOG <i class="fas fa-angle-down"></i
+                ></a>
               </div>
               <div class="dropdown-content">
                 <a href="blog_grid.html">BLOG GRID</a>
                 <a href="blog_list.html">BLOG LIST</a>
-                <a href="#">BLOG POST</a>
+                <a href="blog_post.html">BLOG POST</a>
               </div>
             </div>
             <div class="dropdown">
@@ -70,13 +70,13 @@
                 <a href="shop.html">SHOP <i class="fas fa-angle-down"></i></a>
               </div>
               <div class="dropdown-content">
-                <a href="#">SHOP</a>
-                <a href="#">SHOP DETAIL</a>
+                <a href="shop.html">SHOP</a>
+                <a href="shopdetail.html">SHOP DETAIL</a>
               </div>
             </div>
             <div class="dropdown">
               <div class="dropdown__main">
-                <a href="#">CONTACT</a>
+                <a href="contact.html">CONTACT</a>
               </div>
             </div>
           </div>
