INT-17: Add bold, italic, abbr

--- a/home.html
+++ b/home.html
@@ -170,9 +170,14 @@
               consectetur adipiscing elit.
             </p>
             <dl class="data__list" style="padding: 10px 0">
-              <dt>Interior design</dt>
+              <dt>
+                <b> <u> Interior design</u></b>
+              </dt>
               <dd>
-                Business & Institutional Furniture Manufacturers Association
+                <em
+                  >Business & Institutional Furniture Manufacturers
+                  Association</em
+                >
               </dd>
             </dl>
 
@@ -375,7 +380,7 @@
               <h3 class="price__title">2 Room Apartment</h3>
               <p class="price__offer">&#36;49,000</p>
               <ul class="apartment-space">
-                <li>77m<sup>2</sup></li>
+                <li>77<abbr title="meter">m</abbr> <sup>2</sup></li>
                 <li>30m<sup>2</sup></li>
                 <li>15m<sup>2</sup></li>
               </ul>
