INT-22: Modify home page

--- a/home.html
+++ b/home.html
@@ -17,7 +17,9 @@
       type="image/x-icon"
     />
     <link rel="stylesheet" href="/css/home.css" />
+    <link rel="stylesheet" href="/css/header.css" />
     <link rel="stylesheet" href="/css/carousel.css" />
+    <link rel="stylesheet" href="/css/footer.css" />
   </head>
   <body>
     <header>
@@ -45,10 +47,12 @@
             </div>
             <div class="dropdown">
               <div class="dropdown__main">
-                <a href="#">PROJECTS <i class="fas fa-angle-down"></i></a>
+                <a href="masonry.html"
+                  >PROJECTS <i class="fas fa-angle-down"></i
+                ></a>
               </div>
               <div class="dropdown-content">
-                <a href="#">PROJECT MASONRY</a>
+                <a href="masonry.html">PROJECT MASONRY</a>
                 <a href="#">PROJECT GRID</a>
                 <a href="#">PROJECT DETAIL</a>
               </div>
