--- a/shop.html
+++ b/shop.html
@@ -318,7 +318,7 @@
         height="150"
       />
       <p>Soft Chair</p>
-      <p><b>$ 1.900</b></p>
+      <p><b>1.900 &euro;</b></p>
       <form>
         <button class="button1" style="height: 40px; width: 200px">
           View Product
@@ -334,7 +334,7 @@
         height="150"
       />
       <p>Coffee Table</p>
-      <p><b>$ 1.100</b></p>
+      <p><b>1.100 &euro;</b></p>
       <form>
         <button class="button2" style="height: 40px; width: 200px">
           View Product
@@ -350,7 +350,7 @@
         height="150"
       />
       <p>Night Light</p>
-      <p><b>$ 870</b></p>
+      <p><b>870 &euro;</b></p>
       <form>
         <button class="button3" style="height: 40px; width: 200px">
           View Product
@@ -366,7 +366,7 @@
         height="150"
       />
       <p>Desk Table</p>
-      <p><b>$ 1.400</b></p>
+      <p><b>1.400 &euro;</b></p>
       <form>
         <button class="button4" style="height: 40px; width: 200px">
           View Product
@@ -382,7 +382,7 @@
         height="150"
       />
       <p>Soft Chair</p>
-      <p><b>$ 1.690</b></p>
+      <p><b>1.690 &euro;</b></p>
       <form>
         <button class="button5" style="height: 40px; width: 200px">
           View Product
@@ -398,7 +398,7 @@
         height="150"
       />
       <p>Coffee Table</p>
-      <p><b>$ 1.500</b></p>
+      <p><b>1.500 &euro;</b></p>
       <form>
         <button class="button6" style="height: 40px; width: 200px">
           View Product
@@ -414,7 +414,7 @@
         height="150"
       />
       <p>Night Light</p>
-      <p><b>$ 790</b></p>
+      <p><b>790 &euro;</b></p>
       <form>
         <button class="button7" style="height: 40px; width: 200px">
           View Product
@@ -430,7 +430,7 @@
         height="150"
       />
       <p>Desk Table</p>
-      <p><b>$ 1.750</b></p>
+      <p><b>1.750 &euro;</b></p>
       <form>
         <button class="button8" style="height: 40px; width: 200px">
           View Product
