--- a/shopdetail.html
+++ b/shopdetail.html
@@ -307,7 +307,7 @@
     <div class="square">
       <h2 style="color: darkblue">Bromley Wing Back Chair</h2>
       <br />
-      <p style="color: goldenrod"><b>$ 2.500</b></p>
+      <p style="color: goldenrod"><b>2.500 &euro;</b></p>
       <br />
       <p style="color: grey">
         Hand Crafted in England. Upholstered in a stunning deep blue velvet, our
