--- a/shopdetail.html
+++ b/shopdetail.html
@@ -311,12 +311,12 @@
       <br />
       <p style="color: grey">
         Hand Crafted in England. Upholstered in a stunning deep blue velvet, our
-        generously proportioned Bromley chair is both elegant and timeless.Its
+        generously proportioned &quot;Bromley chair&quot; is both elegant and timeless.Its
         welcoming stance will encourage you to curl up with a favourite read,
         whilst its curved wing back and plump seat will cradle you in comfort
         for your afternoon snooze. Style with our Elbert buttoned footstool for
         the perfect pairing in your living area or boudoir, a special chair for
-        that special place in your home. The front legs on our Bromley chair…
+        that special place in your home. The front legs on our &quot;Bromley chair&quot;…
       </p>
       <br />
       <p style="color: darkblue"><b>Category:</b></p>
