--- a/shopdetail.html
+++ b/shopdetail.html
@@ -305,7 +305,7 @@
     </table>
 
     <div class="square">
-      <h2 style="color: darkblue">Bromley Wing Back Chair</h2>
+      <h2 style="color: darkblue">Bromley Wing&nbsp;Back Chair</h2>
       <br />
       <p style="color: goldenrod"><b>2.500 &euro;</b></p>
       <br />
