--- a/contact.html
+++ b/contact.html
@@ -298,7 +298,7 @@
             </td>
         </tr>
         <tr>
-            <td colspan="2">Sheshi "Zahir Pajaziti"</td>
+            <td colspan="2">Sheshi &#34;Zahir Pajaziti&#34;</td>
         </tr>
         <tr>
             <td>Prishtina</td>
