--- a/shopdetail.html
+++ b/shopdetail.html
@@ -311,9 +311,9 @@
       <br />
       <p style="color: grey">
         Hand Crafted in England. Upholstered in a stunning deep blue velvet, our
-        generously proportioned &quot;Bromley chair&quot; is both elegant and timeless.Its
+        generously proportioned &quot;Bromley chair&quot; is both elegant and timeless.It&apos;s
         welcoming stance will encourage you to curl up with a favourite read,
-        whilst its curved wing back and plump seat will cradle you in comfort
+        whilst it&#39;s curved wing back and plump seat will cradle you in comfort
         for your afternoon snooze. Style with our Elbert buttoned footstool for
         the perfect pairing in your living area or boudoir, a special chair for
         that special place in your home. The front legs on our &quot;Bromley chair&quot;…
