--- a/shopdetail.html
+++ b/shopdetail.html
@@ -311,14 +311,37 @@
       <br />
       <p style="color: grey">
         Hand Crafted in England. Upholstered in a stunning deep blue velvet, our
-        generously proportioned &quot;Bromley chair&quot; is both elegant and timeless.It&apos;s
+        generously proportioned &quot;Bromley chair&quot; is both elegant and timeless.<span id="points">...</span>
+        <span id="moreText">It&apos;s
         welcoming stance will encourage you to curl up with a favourite read,
         whilst it&#39;s curved wing back and plump seat will cradle you in comfort
         for your afternoon snooze. Style with our Elbert buttoned footstool for
         the perfect pairing in your living area or boudoir, a special chair for
-        that special place in your home. The front legs on our &quot;Bromley chair&quot;…
+          that special place in your home. The front legs on our &quot;Bromley chair&quot;…</span>
       </p>
-      <br />
+      <br>
+        <button onclick="toggleText()" id="textButton">
+          Show More
+      </button>
+      <br>
+      <script>
+        function toggleText() {
+            var points = document.getElementById("points");
+            var showMoreText =document.getElementById("moreText");
+            var buttonText =document.getElementById("textButton");
+            if (points.style.display === "none") {
+               showMoreText.style.display = "none";
+                points.style.display = "inline";
+                buttonText.innerHTML = "Show More";
+            }
+            else {
+                showMoreText.style.display = "inline";
+                points.style.display = "none";
+                buttonText.innerHTML = "Show Less";
+            }
+        }
+    </script>
+      <br>
       <p style="color: darkblue"><b>Category:</b></p>
       <p style="color: grey">Interior/ Arm</p>
     </div>
