--- a/shopdetail.html
+++ b/shopdetail.html
@@ -107,6 +107,11 @@
         width: 100%;
         position: absolute;
       }
+      #textButton{
+          color:white;
+          background-color: tomato;
+          text-align:center;
+        }
       .footer-content {
         display: flex;
         justify-content: space-between;
