--- a/blog_grid.html
+++ b/blog_grid.html
@@ -65,7 +65,7 @@
           <a href="/home.html" id="logo">
             <img
               alt="Logo company logo"
-              src="/images/logo.png"
+              src="images/logo.png"
               width="350"
               height="60"
             />
@@ -337,7 +337,7 @@
                 <li>
                   <a href="https://www.facebook.com/" target="_blank"
                     ><img
-                      src="/images/facebook.png"
+                      src="images/facebook.png"
                       alt="facebook logo"
                       width="20px"
                       height="20px"
@@ -346,7 +346,7 @@
                 <li>
                   <a href="https://www.instagram.com/" target="_blank">
                     <img
-                      src="/images/instagram.png"
+                      src="images/instagram.png"
                       alt="instagram logo"
                       width="20px"
                       height="20px"
@@ -356,7 +356,7 @@
                 <li>
                   <a href="https://www.twitter.com/" target="_blank"
                     ><img
-                      src="/images/twitter.png"
+                      src="images/twitter.png"
                       alt="twitter logo"
                       width="20px"
                       height="20px"
@@ -365,7 +365,7 @@
                 <li>
                   <a href="https://www.youtube.com/" target="_blank"
                     ><img
-                      src="/images/youtube.png"
+                      src="images/youtube.png"
                       alt="youtube logo"
                       width="20px"
                       height="20px"
