--- a/blog_list.html
+++ b/blog_list.html
@@ -21,7 +21,7 @@
           <a href="/home.html" id="logo">
             <img
               alt="Logo company logo"
-              src="/images/logo.png"
+              src="images/logo.png"
               width="350"
               height="60"
             />
@@ -126,7 +126,7 @@
                 >
                 <br /><br />
 
-                <p>
+                <p class="paragraph">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras
                   lacinia magna vel molestie faucibus. Donec auctor et urnaLorem
                   ipsum dolor sit amet, consectetur adipiscing elit.
@@ -174,7 +174,7 @@
                 >
                 <br /><br />
 
-                <p>
+                <p class="paragraph">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras
                   lacinia magna vel molestie faucibus. Donec auctor et urnaLorem
                   ipsum dolor sit amet, consectetur adipiscing elit.
@@ -222,7 +222,7 @@
                 >
                 <br /><br />
 
-                <p>
+                <p class="paragraph">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras
                   lacinia magna vel molestie faucibus. Donec auctor et urnaLorem
                   ipsum dolor sit amet, consectetur adipiscing elit.
@@ -270,7 +270,7 @@
                 >
                 <br /><br />
 
-                <p>
+                <p class="paragraph">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras
                   lacinia magna vel molestie faucibus. Donec auctor et urnaLorem
                   ipsum dolor sit amet, consectetur adipiscing elit.
@@ -385,7 +385,7 @@
                 <li>
                   <a href="https://www.facebook.com/" target="_blank"
                     ><img
-                      src="/images/facebook.png"
+                      src="images/facebook.png"
                       alt="facebook logo"
                       width="20px"
                       height="20px"
@@ -394,7 +394,7 @@
                 <li>
                   <a href="https://www.instagram.com/" target="_blank">
                     <img
-                      src="/images/instagram.png"
+                      src="images/instagram.png"
                       alt="instagram logo"
                       width="20px"
                       height="20px"
@@ -404,7 +404,7 @@
                 <li>
                   <a href="https://www.twitter.com/" target="_blank"
                     ><img
-                      src="/images/twitter.png"
+                      src="images/twitter.png"
                       alt="twitter logo"
                       width="20px"
                       height="20px"
@@ -413,7 +413,7 @@
                 <li>
                   <a href="https://www.youtube.com/" target="_blank"
                     ><img
-                      src="/images/youtube.png"
+                      src="images/youtube.png"
                       alt="youtube logo"
                       width="20px"
                       height="20px"
