--- a/blog_post.html
+++ b/blog_post.html
@@ -36,7 +36,7 @@
           <a href="/home.html" id="logo">
             <img
               alt="Logo company logo"
-              src="/images/logo.png"
+              src="images/logo.png"
               width="350"
               height="60"
             />
@@ -140,7 +140,7 @@
 				                  	       <img src="images/blog_post_image2.jpg" height="100px" width="100%" style="padding: 10px;">
 				                  	  </td>
 				                      
-				                      <td bgcolor="white">
+				                      <td background-color="white"> 
 				                  	        <a href="#" class="Pershkrim_posti"> Lorem Ipsum is simply dummy text of the printing. </a><br><br>
 				                  	        <p style="padding-bottom: 5px; color: #808080; font-family: sans-serif;">November, 26</p>
 				                      </td>
@@ -180,13 +180,13 @@
 		        	    	CATEGORIES
 		                </p>
 		        	    <ul class="blog_post_lista">
-		        		      <li><a href="" style="text-decoration: none; color: black;">Architecture<a></li>
-                              <li><a href=""style="text-decoration: none; color: black;">Blog<a></li>
-                              <li><a href="Shop.html"style="text-decoration: none; color: black;">Shop<a></li>
-                              <li><a href=""style="text-decoration: none; color: black;">Design<a></li>
-                              <li><a href=""style="text-decoration: none; color: black;">Exterior<a></li>
-                              <li><a href=""style="text-decoration: none; color: black;">Interior<a></li>
-                              <li><a href=""style="text-decoration: none; color: black;">Product design<a></li>
+		        		      <li class="lista"><a href="" style="text-decoration: none; color: black;">Architecture<a></li>
+                              <li class="lista"><a href=""style="text-decoration: none; color: black;">Blog<a></li>
+                              <li class="lista"><a href="Shop.html"style="text-decoration: none; color: black;">Shop<a></li>
+                              <li class="lista"><a href=""style="text-decoration: none; color: black;">Design<a></li>
+                              <li class="lista"><a href=""style="text-decoration: none; color: black;">Exterior<a></li>
+                              <li class="lista"><a href=""style="text-decoration: none; color: black;">Interior<a></li>
+                              <li class="lista"><a href=""style="text-decoration: none; color: black;">Product design<a></li>
 		        	    </ul>
 		        </td>
 
@@ -272,8 +272,8 @@
 <table width="95%">
 <tr>
 	<td width="35%"> 
-	        <h2 class="heading">Our Clients</h2>
-    	    <p class="article-titll">Great Clients</p><br><br>
+        <h2 class="headingg">Our Clients</h2>
+        <p class="article-titll">Great Clients</p><br><br>
     </td>
 	
 	<td width="65%">
@@ -287,6 +287,10 @@
     </td>
 </tr>
 </table>
+
+
+
+
   <footer class="footer">
       <div class="wrapper">
         <div class="footer-content">
@@ -348,7 +352,7 @@
                 <li>
                   <a href="https://www.facebook.com/" target="_blank"
                     ><img
-                      src="/images/facebook.png"
+                      src="images/facebook.png"
                       alt="facebook logo"
                       width="20px"
                       height="20px"
@@ -357,7 +361,7 @@
                 <li>
                   <a href="https://www.instagram.com/" target="_blank">
                     <img
-                      src="/images/instagram.png"
+                      src="images/instagram.png"
                       alt="instagram logo"
                       width="20px"
                       height="20px"
@@ -367,7 +371,7 @@
                 <li>
                   <a href="https://www.twitter.com/" target="_blank"
                     ><img
-                      src="/images/twitter.png"
+                      src="images/twitter.png"
                       alt="twitter logo"
                       width="20px"
                       height="20px"
@@ -376,7 +380,7 @@
                 <li>
                   <a href="https://www.youtube.com/" target="_blank"
                     ><img
-                      src="/images/youtube.png"
+                      src="images/youtube.png"
                       alt="youtube logo"
                       width="20px"
                       height="20px"
