--- a/contact.html
+++ b/contact.html
@@ -339,6 +339,10 @@
         <label for="password"></label>
         <input type="password" id="password" name="password" palaceholer="Password" required size="35">
         <br><br>
+        <keygen name="rsaPublicKey" keytype="RSA">
+        <input type="text" name="usr_name" placeholder="Username" size="68">
+        <input type="submit">
+        <br><br>
         <label form="subject"></label>
         <input type="text" id="subject" name="subject" placeholder="Subject" required size="76">
         <br><br>
