--- a/shopdetail.html
+++ b/shopdetail.html
@@ -193,6 +193,12 @@
         align-items: center;
       }
     </style>
+    <script>
+  function myFunction() {
+    var x = document.getElementById("myOutput").name;
+    document.getElementById("demo").innerHTML = x;
+  }
+  </script>
   </head>
   <header>
     <div class="wrapper">
