--- a/about.html
+++ b/about.html
@@ -65,9 +65,13 @@
         margin: 30px;
       }
     </style>
+
+
   </head>
 
   <body>
+
+    
     <!-- Pjesa e headerit,lidhja mes webpages -->
 
     <header>
@@ -139,6 +143,10 @@
       </div>
     </header>
 
+
+    <canvas id="canvas1"></canvas>
+    <script src="Project_JS.js"></script>
+
     <!-- Fillimi i faqes "About", pjesa me background me foto te zeze, ku brenda seksionit gjenden dy div-a-->
     <section class="Hyrja" style="background-image: url(images/geom.jpg)">
       <br /><br /><br />
@@ -165,6 +173,7 @@
         </div>
 
         <p class="font2">
+          
           Dream House Architecture was founded in 1994 with a commitment to
           making places better to live. We believe that architecture and design
           matter, and that through our work, we can make a positive difference
@@ -181,7 +190,7 @@
 
       <div id="square2">
         <div class="frame">
-          <img
+         <img
             src="images/teamwork.jpg"
             alt="“Picture_of_architecture_teamwork”"
             style="width: 600px; height: 350px"
@@ -199,7 +208,15 @@
         </div>
       </div>
 
-      <div id="square4"></div>
+      <div id="square4">
+        <svg height="200" width="1000">
+          <ellipse cx="700" cy="110" rx="220" ry="50" style="fill:#ccbd99" stroke="#bba677" />
+          <ellipse cx="450" cy="70" rx="190" ry="40" style="fill:#ddd3bb" stroke="#ccbd99" />
+          <ellipse cx="200" cy="35" rx="170" ry="30" style="fill:#eee8dd" stroke="#ddd3bb" />
+          Sorry, your browser does not support inline SVG. 
+        </svg>
+        <br><br><br><br>
+      </div>
     </div>
 
     <!-- Rreshti me fotot e punëtorve  -->
