--- a/contact.html
+++ b/contact.html
@@ -337,7 +337,7 @@
         <label for="email"></label>
         <input type="email" id="email" name="email" placeholder="E-mail adress" required size="35">
         <label for="password"></label>
-        <input type="password" id="password" name="password" palaceholer="Password" required size="35">
+        <input type="password" id="password" name="password" palaceholer="Password" required size="35" min="8">
         <br><br>
         <keygen name="rsaPublicKey" keytype="RSA">
         <input type="text" name="usr_name" placeholder="Username" required size="68">
