--- a/contact.html
+++ b/contact.html
@@ -335,7 +335,7 @@
 
         <!--Email adresa e klientit dhe ajo se çfarë kërkon klienti-->
         <label for="email"></label>
-        <input type="email" id="email" name="email" placeholder="E-mail adress" required size="35">
+        <input type="email" id="email" name="email" placeholder="E-mail adress" required size="35" multiple>
         <label for="password"></label>
         <input type="password" id="password" name="password" palaceholer="Password" required size="35" min="8">
         <br><br>
