--- a/contact.html
+++ b/contact.html
@@ -327,7 +327,7 @@
     </table>
     
     <!--Krijimi i formave për klientët-->
-    <form action="">
+    <form action="" autocomplete="on">
         <!--Emri i klientit-->
         <label for="yourname"></label>
         <input type="text" id="yourname" name="name" placeholder="Your name" required size="76">
