--- a/shop.html
+++ b/shop.html
@@ -465,7 +465,7 @@
               <option value="Lamb">
             </datalist>
         <br /><br />
-        <input type="submit" value="SUBMIT" />
+        <input type="submit" value="SUBMIT" formtarget="_blank">
       </fieldset>
     </form>
 
