--- a/shop.html
+++ b/shop.html
@@ -456,7 +456,7 @@
         <label for="table">Table</label>
         <input type="checkbox" id="table" name="checkbox" value="table" />
         <label for="other">Other:</label>
-            <input list="others" name="other" id="other">
+            <input list="others" name="other" id="other" formnovalidate="formnovalidate">
             <datalist id="others">
               <option value="Chair">
               <option value="Bookshelf">
@@ -465,7 +465,7 @@
               <option value="Lamb">
             </datalist>
         <br /><br />
-        <input type="submit" value="SUBMIT" formtarget="_blank">
+        <input type="submit" value="SUBMIT" formtarget="_blank" formnovalidate="formnovalidate">
       </fieldset>
     </form>
 
