--- a/contact.html
+++ b/contact.html
@@ -374,7 +374,7 @@
     </table>
     
     <!--Krijimi i formave për klientët-->
-    <form action="" autocomplete="on">
+    <form action="" autocomplete="on" name="myForm" onsubmit="return validateForm()">
         <!--Emri i klientit-->
         <label for="yourname"></label>
         <input type="text" id="yourname" name="name" placeholder="Your name" required size="76">
