--- a/about.html
+++ b/about.html
@@ -179,12 +179,12 @@
           matter, and that through our work, we can make a positive difference
           in the world. We strive to create buildings that are not just things
           in themselves, but serve as catalysts for positive urban and social
-          change.<br />
+          change.
           With our integrated team of architects, interior designers, planners
           and engineers, we advocate for the people who are served by the spaces
           we design. We engage with our clients on a personal level, as both
           institutions and people, so we can help them do better what they do
-          best. <br />
+          best.
         </p>
       </div>
 
