--- a/blog_list.html
+++ b/blog_list.html
@@ -84,6 +84,22 @@
       </div>
     </header>
 
+    
+    <canvas id="canvas1">Your browser does not support the HTML5 canvas tag.</canvas>
+     <script>
+              var c = document.getElementById("canvas1");
+              var ctx = c.getContext("2d");
+
+              var grd = ctx.createRadialGradient(75,50,5,90,60,100);
+              grd.addColorStop(0,"gray");
+              grd.addColorStop(1,"black");
+
+               ctx.fillStyle = grd;
+               ctx.fillRect(10,10,150,80);
+     </script>
+
+     
+
     <!-- Pjesa e zeze e fillimit, a.k.a Titulli i faqes , prezantimi -->
 
     <section class="Hyrja" style="background-image: url(images/geom.jpg)">
