--- a/contact.html
+++ b/contact.html
@@ -269,8 +269,8 @@
               </div>
               <div class="dropdown-content">
                 <a href="home.html">HOME SLIDER</a>
-                <a href="#">HOME IMAGE</a>
-                <a href="#">HOME VIDEO</a>
+                <a href="home_image.html">HOME IMAGE</a>
+                <a href="home_video_audio.html">HOME VIDEO</a>
               </div>
             </div>
             <div class="dropdown">
