--- a/home_image.html
+++ b/home_image.html
@@ -184,7 +184,72 @@
               />
             </div>
             <div>
-              <h1>SVG</h1>
+              <h1>Our first design</h1>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="200"
+                height="300"
+                style="margin: 50% 10px"
+              >
+                <polygon
+                  fill="#1A374D"
+                  stroke="#000"
+                  stroke-width="3"
+                  points="0,100 100,0 200,100"
+                />
+                <rect
+                  x="28"
+                  y="100"
+                  width="150"
+                  height="150"
+                  style="
+                    fill: #406882;
+                    stroke: black;
+                    stroke-width: 3;
+                    fill-opacity: 1;
+                    stroke-opacity: 0.9;
+                  "
+                />
+                <rect
+                  x="50"
+                  y="130"
+                  width="30"
+                  height="30"
+                  style="
+                    fill: #b1d0e0;
+                    stroke: black;
+                    stroke-width: 3;
+                    fill-opacity: 1;
+                    stroke-opacity: 0.9;
+                  "
+                />
+                <rect
+                  x="120"
+                  y="130"
+                  width="30"
+                  height="30"
+                  style="
+                    fill: #b1d0e0;
+                    stroke: black;
+                    stroke-width: 3;
+                    fill-opacity: 1;
+                    stroke-opacity: 0.9;
+                  "
+                />
+                <rect
+                  x="85"
+                  y="200"
+                  width="30"
+                  height="50"
+                  style="
+                    fill: #b1d0e0;
+                    stroke: black;
+                    stroke-width: 3;
+                    fill-opacity: 1;
+                    stroke-opacity: 0.9;
+                  "
+                />
+              </svg>
             </div>
           </div>
         </div>
