--- a/shop.html
+++ b/shop.html
@@ -252,6 +252,19 @@
 		  }
 		    return true;
 	    }
+	    function validation() {
+    var radios = document.getElementsByName("radio");
+    var formValid = false;
+
+    var i = 0;
+    while (!formValid && i < radios.length) {
+        if (radios[i].checked) formValid = true;
+        i++;        
+    }
+
+    if (!formValid) alert("Must check some option!");
+    return formValid;
+   }
     </script>
   </head>
   <header>
