--- a/contact.html
+++ b/contact.html
@@ -402,6 +402,16 @@
         <button class="button" style="height: 40px;width: 543px;" onclick="send()">Send Message</button>
 
     </form>
+    
+    <p id="demo"></p>
+    <script>
+      let num =38380025000;
+      let n=num.toString();
+      document.getElementById("demo").innerHTML=n;
+
+      let result=Number.isNaN(38380025000);
+      document.getElementById("demo").innerHTML=result;
+    </script>
   </section>
 
   <div class="responsive-map">
